--- a/box.html
+++ b/box.html
@@ -34,16 +34,16 @@
 <body>
     <div class="page">
         <div class="borderBox div1">
-            dfsdfsdfsdfsdf
+            borderBox
         </div>
         <div class="contentBox div1">
-            dfsdfsdfsdfsdf
+            contentBox
         </div>
         <div class="borderBox div2">
-            dfsdfsdfsdfsdf
+            borderBox
         </div>
         <div class="contentBox div2">
-            dfsdfsdfsdfsdf
+            contentBox
         </div>
     </div>
 </body>
